# talk-pi

./: .env.example  .gitignore  .gitmodules  .npmignore  AGENTS.md  LICENSE  PLAN.md  Pi-Coding-Agent-Extension.md  README.md  bug.md  package-lock.json  package.json  pi-listener.ts  sdk.md  talk-pi.ts  test.sh  tui.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: pi.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
native/listener/: CMakeLists.txt  build.sh  pi-listener.cpp
scripts/: patch-node-record-lpcm16-ts.mjs
specs/001-push-to-talk-voice/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-whisper-input/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-piper-tts-playback/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-f5-auto-insert/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-esc-stop-playback/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-mute-extension/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-unified-talk-menu/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.ts  tools-bootstrap.ts  tools.ts  voice-settings.ts
src/input/: f5-shortcut.ts  (+4 more)
tmp/: install-piper-ptbr.ps1  install-piper.ps1
(+166 files in other folders)
